fix remove bug vertical spacing

--- a/ui/css/treeherder-pinboard.css
+++ b/ui/css/treeherder-pinboard.css
@@ -177,6 +177,8 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .pinboard-related-bugs-btn {
+  display: inline-flex;
+  align-items: center;
   margin-bottom: -1px;
 }
 
